# shilohnova

./: Caddyfile  Cargo.toml  Dockerfile  LICENSE  LICENSES.md  README.md  build_script.sh  config.toml  input.css  package-lock.json  package.json  tailwind.config.js
data/shilohnova.db/: 000057.sst  000060.sst  000065.sst  000070.sst  IDENTITY  MANIFEST-000072  OPTIONS-000069
src/: app.rs  main.rs
style/: tailwind.css
